syntax = "proto3";
package bitcoin.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/bitcoin/types";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "bitcoin/v1beta1/tx.proto";

option (gogoproto.goproto_registration) = true;

// Msg defines the bitcoin Msg service.
service MsgService {
  rpc Link(bitcoin.v1beta1.LinkRequest) returns (bitcoin.v1beta1.LinkResponse) {
    option (google.api.http) = {
      post : "/axelar/bitcoin/link/{recipient_chain}"
      body : "*"
    };
  }

  rpc ConfirmOutpoint(bitcoin.v1beta1.ConfirmOutpointRequest)
      returns (bitcoin.v1beta1.ConfirmOutpointResponse) {
    option (google.api.http) = {
      post : "/axelar/bitcoin/confirm"
      body : "*"
    };
  }

  rpc VoteConfirmOutpoint(bitcoin.v1beta1.VoteConfirmOutpointRequest)
      returns (bitcoin.v1beta1.VoteConfirmOutpointResponse) {
    option (google.api.http) = {
    };
  }

  rpc SignPendingTransfers(bitcoin.v1beta1.SignPendingTransfersRequest)
      returns (bitcoin.v1beta1.SignPendingTransfersResponse) {
    option (google.api.http) = {
      post : "/axelar/bitcoin/sign-pending-transfers"
      body : "*"
    };
  }

  rpc SignMasterConsolidationTransaction(
      bitcoin.v1beta1.SignMasterConsolidationTransactionRequest)
      returns (bitcoin.v1beta1.SignMasterConsolidationTransactionResponse) {
    option (google.api.http) = {
      post : "/axelar/bitcoin/sign-master-consolidation-transaction"
      body : "*"
    };
  }

  rpc RegisterExternalKey(bitcoin.v1beta1.RegisterExternalKeyRequest)
      returns (bitcoin.v1beta1.RegisterExternalKeyResponse) {
    option (google.api.http) = {
      post : "/axelar/bitcoin/register-external-key"
      body : "*"
    };
  }
}
